--- a/index.html
+++ b/index.html
@@ -9,24 +9,65 @@
   </head>
   <body class="bg-rose-50">
    
-    <div class="m-24">
-      <div class="flex mt-52">
-      <img class="w-52 h-52" src="https://clipartcraft.com/images/pirates-of-the-caribbean-logo-icon-8.png" />
+    <div class="page">
+      <div class="row">
+      <img src="https://clipartcraft.com/images/pirates-of-the-caribbean-logo-icon-8.png" />
 
       <form>
-      <textarea id="fill" cols=100 class="ml-6 h-52 rounded-md border-4 border-fuchsia-500 border-solid"
-      style="width:50pc;"
+      <textarea id="fill" cols=100
        placeholder="Text to be translated here">
     </textarea>
-    <button type="submit" id="btn" class="bg-fuchsia-500 p-4 px-6 rounded-md" 
-    style="position: relative; right:130px; bottom: 50px;">Translate</button>
+    <button type="submit" id="btn">Translate</button>
   </form>
     </div>
-      <div id="minionResult" class=" ml-20 h-52 rounded-md border-4 border-fuchsia-500 border-solid" style="width:60pc;"></div>
+      <div id="minionResult"></div>
     </div>
 
     <script src="./index.js"> </script>
 
+    <style>
+      body{
+        background-color: #fff1f2;
+      }
+      .page{
+  margin: 15pc;
+      }
+      .row{
+        display: flex;
+        margin: 20px;
+      }
+  img{
+    width: 10pc;
+    height: 10pc;
+  }
+  textarea{
+  border: 5px solid #d946ef;
+  border-radius: 15px;
+  margin-left: 20px;
+  height: 10pc;
+  width: 45pc;
+  }
+  #btn{
+   background-color: #d946ef;
+   width:8pc;
+   height: 30px;
+  border-radius: 15px;
+  position: relative;
+  font-size: 20px;
+   right:150px; 
+   bottom: 30px;
+   padding: 30px;
+  
+  }
+  #minionResult{
+    border: 5px solid #d946ef;
+  border-radius: 15px;
+  margin-top: 50px;
+  width: 60pc;
+  height: 200px;
+  padding: 20px;
+  }
+     </style>
    
   </body>
 </html>
