--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>pirate Speaks</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./index.js"> </script>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body class="bg-rose-50">
    
@@ -23,51 +23,6 @@
       <div id="minionResult"></div>
     </div>
 
-    <script src="./index.js"> </script>
-
-    <style>
-      body{
-        background-color: #fff1f2;
-      }
-      .page{
-  margin: 15pc;
-      }
-      .row{
-        display: flex;
-        margin: 20px;
-      }
-  img{
-    width: 10pc;
-    height: 10pc;
-  }
-  textarea{
-  border: 5px solid #d946ef;
-  border-radius: 15px;
-  margin-left: 20px;
-  height: 10pc;
-  width: 45pc;
-  }
-  #btn{
-   background-color: #d946ef;
-   width:8pc;
-   height: 30px;
-  border-radius: 15px;
-  position: relative;
-  font-size: 20px;
-   right:150px; 
-   bottom: 30px;
-   padding: 30px;
-  
-  }
-  #minionResult{
-    border: 5px solid #d946ef;
-  border-radius: 15px;
-  margin-top: 50px;
-  width: 60pc;
-  height: 200px;
-  padding: 20px;
-  }
-     </style>
    
   </body>
 </html>
